--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
     "geist": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^15.4.7",
     "next-themes": "^0.4.4",
     "qrcode.react": "latest",
-    "react": "^18",
+    "react": "^19.1.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "^18",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
